--- a/tigers.yaml
+++ b/tigers.yaml
@@ -1,12 +1,8 @@
 team: Tigers
 
-<<<<<<< HEAD
 manager: Kenneth
-=======
-manager: Deborah
->>>>>>> coflict-1
 
-coach : Grace
+coach : Ruth
 
 members:
 - Linda
