--- a/leopards.yaml
+++ b/leopards.yaml
@@ -2,14 +2,11 @@ team: Leopards
 
 manager: Nora
 
-<<<<<<< HEAD
 coach: Nicolas
-=======
-coach: Melissa
->>>>>>> 396cb6a (Edit Leopards)
 
 members:
 - Linda
 - William
 - David
 - Olivia
+- Evie
